# gridlens

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  NOTICE  README.md  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
docs/: BUILD_REPORT.md  REVIEW_LOGIC.md  REVIEW_QUALITY.md  WALKTHROUGH.md  gridlens-build-plan.md  index.html
examples/: gb.html  validation_report.md
plugin/.claude-plugin/: marketplace.json  plugin.json
plugin/skills/grid-calc/: SKILL.md
plugin/skills/grid-dashboard/: SKILL.md
plugin/skills/grid-monitor/: SKILL.md
plugin/skills/grid-trends/: SKILL.md
src/gridlens/: __init__.py  anomalies.py  api.py  cli.py  client.py  config.py  engine.py  exceptions.py  logging_config.py  metrics.py  models.py  render.py  validation.py
src/gridlens/profiles/: gb.yaml  scotland.yaml
src/gridlens/templates/: dashboard.html.j2
tests/: conftest.py  test_anomalies.py  test_api.py  test_cli.py  test_client.py  test_config.py  test_engine.py  test_metrics.py  test_models.py  test_render.py  test_validation.py
tests/fixtures/: generation.json  generation_bad.json  generation_good.json  generation_range.json  intensity_date.json  intensity_range.json  stats_range.json
