[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gridlens"
version = "0.1.0"
description = "Trustworthy GB electricity analytics - deterministic engine, CLI, and API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hira Alam" }]
# Runtime deps carry a lower bound (the minimum API we rely on) and a next-major
# upper cap, so a breaking major release can't silently enter a fresh resolve.
# The exact resolved versions are pinned in requirements-lock.txt (the pip
# equivalent of a uv.lock), which CI and reproducible installs use.
dependencies = [
  "pydantic>=2.6,<3",
  "pydantic-settings>=2.2,<3",
  "requests>=2.31,<3",
  "requests-cache>=1.2,<2",
  "pandas>=2.2,<4",
  "jinja2>=3.1,<4",
  "pyyaml>=6.0,<7",
  "typer>=0.12,<1",
  "fastapi>=0.110,<1",
  "uvicorn>=0.29,<1",
  # tzdata provides the IANA zones for zoneinfo (UTC→Europe/London); required on
  # Windows/minimal images that lack a system zone database. Date-versioned, so no cap.
  "tzdata>=2024.1",
]

[project.scripts]
gridlens = "gridlens.cli:main"

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "types-requests",
  "types-PyYAML",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gridlens"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends/Query and Typer's Option/Argument are *designed* to be called
# in argument defaults — that is the framework idiom, not the B008 bug it targets.
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Query",
  "typer.Option",
  "typer.Argument",
]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
# pandas ships no useful stubs for our purposes and pandas-stubs is strict enough
# to be noise on this small a surface; we keep our own signatures typed and treat
# pandas as an untyped boundary. The other libs simply ship no stubs. (Note: the
# gate is `mypy src`; type-checking `tests` too is blocked by numpy 3.x shipping
# 3.12-only stub syntax that clashes with our 3.11 analysis target — see
# docs/REVIEW_QUALITY.md P2-4.)
module = ["requests_cache.*", "uvicorn.*", "urllib3.*", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
